[project]
name = "recommender-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bentoml>=1.3.19",
    "notebook>=7.3.2",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "python-box==6.0.2",
    "tensorflow==2.10",
    "types-pyyaml>=6.0.12.20241230",
    "zenml==0.70.0",
]
